...
        ),
      ),
      floatingActionButton: BlocBuilder<PetListCubit, PetListState>(
        builder: (context, state) => FloatingActionButton.extended(
          onPressed: () => _onAddPet(context, state.pets.length),
          icon: const Icon(Icons.add),
          label: const Text('Add pet'),
        ),
      ),
    );
  }
}

...
